<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:id ="@+id/textPicker_view">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text:"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/textPicker_text"/>

</LinearLayout>