...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menuBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/toolFlyoutMenu"
            android:id="@+id/main_canvas_view"
            android:orientation="horizontal"
            android:background="@color/drawingAreaBackground"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
